# IntergrityCheck

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/integritycheck/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  iterate.cpp  libmem.c  libmem.h  native-lib.cpp
app/src/main/cpp/MemoryVerifier/: Common.h  IntegrityCheck.cpp  IntegrityCheck.h  Utils.cpp  Utils.h
app/src/main/cpp/include/openssl/: engine.h  x509v3.h
app/src/main/java/com/example/integritycheck/: MainActivity.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/integritycheck/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
